# sink-flash-attention-kernel

./: .gitignore  README.md  __init__.py  benchmark.py  numerical_accuracy.py  pyproject.toml  run_accuracy.sh  run_benchmark.sh  run_benchmarks.sh  run_tests.sh  run_tests_gpu.sh  run_tune.sh  run_verl_patch_test.sh  sink_flash_attention.py  sp_utils.py  test_sink_attention.py  test_verl_patch.py  tune_block_sizes.py  verl_patch.py
docs/: architecture.md  design.md
scripts/: plot_benchmarks.py
sink_attention/: __init__.py  cache.py  decode_kernel.py  generate_patch.py  sink_flash_attention.py  sp_utils.py  subprocess_eval.py  verl_patch.py
tests/: benchmark.py  numerical_accuracy.py  run_inference_benchmarks.py  run_test_gpt_oss_model.sh  run_test_s_aux.sh  test_cache.py  test_decode_kernel.py  test_gpt_oss_model.py  test_inference.py  test_s_aux.py  test_sink_attention.py  test_verl_patch.py  tune_block_sizes.py
